fixed navbar icons alignment

--- a/less/breakpoints/mobile/page-sections/header.less
+++ b/less/breakpoints/mobile/page-sections/header.less
@@ -37,10 +37,6 @@ header {
 				.nav-icons {
 					width: 94px;
 
-					.icons {
-						.flex();
-					}
-
 					img {
 						width: 16px;
 					}
