--- a/less/page-sections/header.less
+++ b/less/page-sections/header.less
@@ -136,6 +136,10 @@ header {
 						}
 					}
 
+					.icons {
+						display: flex;
+					}
+
 					.cart {
 						position: relative;
 
